--- a/cms-v1-0-0-0/src/files/css/main.scss
+++ b/cms-v1-0-0-0/src/files/css/main.scss
@@ -4,6 +4,18 @@ $main_light: #34b477;
 @import '~payload/scss';
 
 html {
+  &[data-theme=light] {
+    .icon {
+      img {
+        height: 25px;
+        width: auto;
+        filter: invert(94%) sepia(100%) saturate(25%) hue-rotate(356deg) brightness(105%) contrast(107%);
+      }
+    }
+  }
+}
+
+html {
   &[data-theme=dark] {
     --theme-elevation-0: rgb(24, 20, 48);
     --theme-elevation-50: rgb(37, 33, 61);
@@ -51,13 +63,13 @@ body, h2, h5 {
 }
 
 .login .logo path {
-  fill: rgb(0, 213, 110);
+  fill: #34b477;
 }
 
 .template-default {
   .nav {
     &__brand .icon path {
-      fill: rgb(0, 213, 110);
+      fill: #34b477;
     }
   }
   
@@ -65,7 +77,7 @@ body, h2, h5 {
     .banner {
       // BEM modifier selector (.banner--type-success)
       &--type-success {
-        background: rgb(0, 213, 110);
+        background: #34b477;
         color: white;
       }
 
